# Code32

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PYTHON_OPTIMIZATION_GUIDE.md  README.md  SECURITY.md  requirements.txt  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: python-performance-analysis.py
.github/workflows/: python-quality.yml
codex32/: .env.template  .gitignore  ARCHITECTURE_OVERVIEW.md  BUILD_EXECUTION_MASTER_PLAN.md  BUILD_PROGRESS_DASHBOARD.md  CODEX32_PRODUCTION_READY.md  COMPLETE_IMPLEMENTATION_ROADMAP.md  CONFIGURATION_SECURITY_NOTES.md  CORRECTIONS_APPLIED.md  CUSTOM_CONTAINER_ENGINE.md  DASHBOARD_GUIDE.md  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_QUICK_REFERENCE.md  DASHBOARD_QUICK_START.md  DELIVERABLES_SUMMARY.md  DELIVERY_SUMMARY.md  DEPLOYMENT_SUMMARY.txt  DOCKER_TO_CUSTOM_MIGRATION.md  DOCS_INDEX_LAUNCH.md  DOCUMENTATION_COMPLETE_INDEX.md  DOCUMENTATION_INDEX.md  DOCUMENT_INDEX.md  Dockerfile  EARLY_ROLLOUT_PLAN.md  EXECUTIVE_BRIEFING.md  EXECUTIVE_LAUNCH_SUMMARY.md  EXECUTIVE_SUMMARY_FASTTRACK.md  FAST_TRACK_ACCELERATION_PLAN.md  FAST_TRACK_SUMMARY.txt  FINAL_CHECKLIST.md  FINAL_SUMMARY.md  GETTING_STARTED.md  IMMEDIATE_ACTION_ITEMS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_FINAL.md  IMPLEMENTATION_SUMMARY.txt  IMPROVEMENTS_ROADMAP.md  INTELLIGENT_BOT_BUILDER_STATUS.txt  LAUNCH_CHECKLIST.md  (+34 more)
codex32/app/: __init__.py  adaptive_executor.py  bot_registry.py  bot_types.py  config.py  exceptions.py  (+12 more)
(+35 files in other folders)
