[metadata]
name = Code32
version = 1.0.0
author = Hakuna
author_email = 98fenwickt@gmail.com

[options]
python_requires = >=3.9

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = .git,__pycache__,docs,build,dist,.venv
max-complexity = 10

[isort]
profile = black
line_length = 100

[black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool:pytest]
testpaths = tests
addopts = --cov --cov-report=html --cov-report=term-missing

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
